--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<version>0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
